--- a/CSS/index.html
+++ b/CSS/index.html
@@ -12,6 +12,12 @@
     </header>
 
     <main>
+        <div>
+            <h1>Color References</h1>
+            <a href="https://colorhunt.co/">Color Hunt</a>
+            <a href="https://www.csfieldguide.org.nz/en/interactives/rgb-mixer/">Computer Science Field Guide - RGB Mixer</a>
+            <a href="https://coolors.co/">Cooloers</a>
+        </div>
 
     </main>
 
